syntax = "proto3";

package like.v1;

import "google/protobuf/timestamp.proto";




// like message type
message Like {
    string post_id = 1;
    string user_id = 2;
    google.protobuf.Timestamp created_at = 3;
}

message CreateLikeRequest {
        string post_id = 1;
        string user_id = 2 ;
}

message CreateLikeResponse {
    Like like = 1;
}

message StreamLikesRequest {
    string post_id = 1;
}

message LikeUpdate {
    string post_id = 1;
    int64 total_likes = 3;
    google.protobuf.Timestamp liked_at = 4;

}


service LikeService {
    rpc CreateLike (CreateLikeRequest) returns (CreateLikeResponse);
    rpc StreamLikes(StreamLikesRequest) returns (stream LikeUpdate);
}


